# navajo

./: .clang-format  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  aead_keyset.json  build.rs  go.mod  macro_out.rs  macro_out.txt
.github/workflows/: test.yml
compare/: aead.go  agreement.go  algorithm.go  daead.go  hkdf.go  hpke.go  mac.go  main.go  params.go  signature.go
navajo/: Cargo.toml  LICENSE  README.md
navajo-aws/: Cargo.toml  README.md
navajo-azure/: Cargo.toml  README.md
navajo-cli/: Cargo.toml  README.md
navajo-cli/src/: aad.rs  algorithm.rs  cli.rs  encoding.rs  envelope.rs  lib.rs  secret_store.rs  segment.rs
navajo-gcp/: Cargo.toml  README.md
navajo-gcp/src/: gcp_kms.rs  gcp_secret_manager.rs  gcp_secret_store.rs  kms.rs  lib.rs  secret_manager.rs  secret_store.rs
navajo-vault/: Cargo.toml  README.md
navajo/src/: README.md  aad.rs  aead.rs  aes.rs  b64.rs  buffer.rs  bytes.rs  constant_time.rs  daead.rs  dependencies.md  dsa.rs  envelope.rs  error.rs  hash.rs  hkdf.rs  id.rs  jose.rs  jwk.rs  key.rs  key_info.rs  keyring.rs  keyring_info.rs  kms.rs  lib.rs  mac.rs  metadata.rs  origin.rs  primitive.rs  rand.rs  secret_store.rs  sensitive.rs  sig.rs  signature.rs  status.rs  strings.rs  timestamp.rs
navajo/src/aead/: README.md  algorithm.rs  backend.rs  cipher.rs  ciphertext_info.rs  decrypt.rs  decryptor.rs  derived_aead.rs  encrypt.rs  encryptor.rs  header.rs  key_info.rs  material.rs  method.rs  nonce.rs  reader.rs  salt.rs  segment.rs  size.rs  stream.rs  streaming.rs  try_stream.rs  writer.rs
navajo/src/aead_first_draft/: algorithm.rs  ciphertext_info.rs  header.rs  method.rs  segment.rs  stream.rs
navajo/src/daead/: README.md  algorithm.rs  cipher.rs  key_info.rs  material.rs
navajo/src/dsa/: README.md  algorithm.rs  jwt.rs  key_info.rs  key_pair.rs  signature.rs  signer.rs  signing_key.rs  validate.rs  verifier.rs  verifying_key.rs
navajo/src/hkdf/: README.md  algorithm.rs  prk.rs  salt.rs
navajo/src/hpke/: mode.rs
navajo/src/jose/: algorithm.rs  claims.rs  curve.rs  encryption.rs  header.rs  jwk.rs  jws.rs  key_operation.rs  key_type.rs  key_use.rs  numeric_date.rs  string_or_strings.rs  token_type.rs  validation.rs  validator.rs  zip.rs
navajo/src/mac/: README.md  algorithm.rs  bytes.rs  compute.rs  computer.rs  context.rs  entry.rs  hasher.rs  key.rs  key_info.rs  material.rs  output.rs  read.rs  ring.rs  stream.rs  tag.rs  try_stream.rs  verifier.rs  verify.rs
navajo/src/primitive/: keyring_info.rs  kind.rs
navajo/src/sig/: algorithm.rs  key_info.rs  key_pair.rs  material.rs  signature.rs  signer.rs  signing_key.rs  verifier.rs  verifying_key.rs
navajo/src/signature/: algorithm.rs  jwt.rs  key_info.rs  material.rs  private.rs  public.rs  signature.rs  signer.rs  signing_key.rs  verifier.rs  verifying_key.rs
proto/: aead.proto  aes_gcm.proto  chacha20_poly1305.proto  daead.proto  ed25519.proto  hybrid.proto  keyset.proto  mac.proto  signature.proto  status.proto
src/: aead.rs  error.rs  id.rs  keyset.rs  lib.rs  proto.rs  timestamp.rs
src/proto/: navajo.rs
tests/navajo/no_std/: Cargo.toml
tests/navajo/ring/: Cargo.toml
tests/navajo/sans-blake3/: Cargo.toml
tests/navajo/sans-ring/: Cargo.toml
tests/navajo/with_ring/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
