[workspace]
members = [
	"navajo",
	"navajo-gcp",
	"navajo-aws",
	"navajo-vault",
	"navajo-cli",
	"navajo-azure",
	"xtask",
]
[alias]
xtask = "run --package xtask --"


[patch.crates-io]
navajo = { path = "navajo" }
navajo-gcp = { path = "navajo-gcp" }
navajo-aws = { path = "navajo-aws" }
navajo-vault = { path = "navajo-vault" }
navajo-cli = { path = "navajo-cli" }
navajo-azure = { path = "navajo-azure" }


# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"x86_64-pc-windows-msvc",
	"aarch64-apple-darwin",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
