[package]
name = "navajo-cli"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Chance Dinkins"]
description = "Navajo CLI"

[[bin]]
name = "navajo"

[dependencies]
navajo = { version = "0.0.3", features = [
	"std",
	"blake3",
	"sha3",
	"cmac",
	"aes",
] }
navajo-gcp = { version = "0.0.2" }

strum = { version = "0.24", features = ["derive", "strum_macros"] }
clap = { version = "4.2", features = ["derive", "wrap_help"] }
url = "2.3"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
base64 = "0.21"
anyhow = "1.0"
shellexpand = "3.0"
hex = "0.4"
