[package]
name = "navajo-gcp"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Chance Dinkins"]
description = "Navajo GCP KMS integration"

[dependencies]
kms-aead = { version = "0.12", features = ["gcp-kms-encryption"] }
navajo = { path = "../navajo" }
tokio = { version = "1.26", features = ["full"] }
secret-vault-value = { version = "0.3" }
async-trait = "0.1"
