
[package]
name = "navajo"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Chance Dinkins"]
description = "cryptographic APIs"

# -------------------------
#      Dependencies
# -------------------------


# futures
[dependencies.futures]
version = "0.3"

# pin-project
[dependencies.pin-project]
version = "1.0"

# rayon
[dependencies.rayon]
version = "1.6"
optional = true

# base64
[dependencies.base64]
version = "0.21"
default-features = false
features = ["alloc"]

# inherent
[dependencies.inherent]
version = "1"

# zeroize
[dependencies.zeroize]
version = "1.5"
features = ["alloc", "zeroize_derive", "serde"]

# hashbrown
[dependencies.hashbrown]
version = "0.13"
features = ["serde"]

# rand_core
[dependencies.rand_core]
version = "0.6"
features = ["getrandom"]

# serde
[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive", "rc"]

# serde_json
[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc", "raw_value"]

# strum
[dependencies.strum]
version = "0.24"
default-features = false
features = ["derive", "strum_macros"]

# strum_macros
[dependencies.strum_macros]
version = "0.24"

# bytes
[dependencies.bytes]
version = "1.4"
optional = true

# ring
[dependencies.ring]
version = "0.16"
optional = true

# typenum
[dependencies.typenum]
features = ["no_std"]
version = "1.16"

# generic-array
[dependencies.generic-array]
version = "0.14.6"

# aes-siv
[dependencies.aes-siv]
version = "0.7"
optional = true

# crypto-common
[dependencies.crypto-common]
version = "0.1.6"

# chachapoly1305
[dependencies.chacha20poly1305]
version = "0.10"

# hmac 
[dependencies.hmac]
version = "0.12"
optional = true
default-features = false
features = ["reset"]

# aead
[dependencies.rust_crypto_aead]
version = "0.5"
package = "aead"

# aes-gcm
[dependencies.aes-gcm]
version = "0.10"
features = ["zeroize"]

# ed25519
[dependencies.ed25519]
version = "2.1"
optional = true
default-features = false
features = ["pem", "zeroize", "serde"]

# p256
[dependencies.p256]
version = "0.12"
optional = true
features = ["ecdsa", "pkcs8", "pem", "hash2curve"]

# p384
[dependencies.p384]
version = "0.12"
optional = true
features = ["ecdsa", "pkcs8", "pem", "hash2curve"]

# sha2
[dependencies.sha2]
version = "0.10"
optional = true

# sha3
[dependencies.sha3]
version = "0.10"
optional = true
default-features = false

# pkcs8
[dependencies.pkcs8]
version = "0.10"
default-features = false
features = ["alloc", "pem"]


# cmac
[dependencies.cmac]
version = "0.7"
optional = true
features = ["zeroize"]

# subtle
[dependencies.subtle]
version = "2.4"

# blake3
[dependencies.blake3]
version = "1.3"
optional = true

# hkdf
[dependencies.rust_crypto_hkdf]
package = "hkdf"
version = "0.12"

# aes
[dependencies.aes]
version = "0.8.2"
optional = true
features = ["zeroize"]

#digest
[dependencies.digest]
version = "0.10"
default-features = false
features = ["alloc"]

[dependencies.ed25519-dalek]
version = "1"
optional = true
default-features = false
features = ["alloc", "u64_backend"]

# [dependencies.ecdsa]
# version = "0.15"

# # pbkdf2
# [dependencies.pbkdf2]
# version = "0.11"


# -------------------------
#    Test dependencies
# -------------------------

# quickcheck
[dev-dependencies.quickcheck]
version = "1.0"

[dev-dependencies.quickcheck_macros]
version = "1.0"

# mockall
[dev-dependencies.mockall]
version = "0.11"

# hex
[dev-dependencies.hex]
version = "0.4"
default-features = false
features = ["serde", "alloc"]

# tokio
[dev-dependencies.tokio]
version = "1.14"
features = ["full"] # todo: reduce this.


[features]
default = [
	"ring",
	"std",       # todo: remove
	"aead",
	"aes",       # todo: remove
	"signature",
	"mac",
	"cmac",      # todo: remove
	"aes",       # todo remove
	"blake3",    # todo: remove
	"sha3",      # todoo: remove
	"daead",
]

signature = ["ed25519", "p256", "p384"]
mac = ["sha2", "hmac"]
hkdf = ["sha2", "hmac"]
aead = ["hkdf"]
daead = ["aes-siv"]
std = [
	"ring?/std",
	"hex/std",
	"serde/std",
	"serde_json/std",
	"zeroize/std",
	"aes-gcm/std",
	"aes-siv?/std",
	"hmac?/std",
	"rand_core/std",
	"cmac?/std",
	"chacha20poly1305/std",
	"pkcs8/std",
	"cmac?/std",
	"sha2/std",
	"sha3/std",
	"ed25519-dalek?/std",
]
